@@ -29,9 +29,9 @@ AC_CONFIG_HEADERS([config.h])
 #
 GWENHYWFAR_VERSION_MAJOR=3
 GWENHYWFAR_VERSION_MINOR=1
-GWENHYWFAR_VERSION_PATCHLEVEL=0
+GWENHYWFAR_VERSION_PATCHLEVEL=1
 dnl "stable", "rcX", "betaX", "cvs"
-GWENHYWFAR_VERSION_TAG="svn"
+GWENHYWFAR_VERSION_TAG="stable"
 
 
 
@@ -60,7 +60,7 @@ OHBCI_VERSION_STRING="0.1.0"
 #
 GWENHYWFAR_SO_CURRENT="48"
 GWENHYWFAR_SO_AGE="1"
-GWENHYWFAR_SO_REVISION="0"
+GWENHYWFAR_SO_REVISION="1"
 GWENHYWFAR_SO_EFFECTIVE="`echo \$(($GWENHYWFAR_SO_CURRENT-$GWENHYWFAR_SO_AGE))`"
 
 
