@@ -1,5 +1,13 @@
 
 ===========================================================================
+                    gwenhywfar-3.1.1 (2008/02/10)
+===========================================================================
+
+This release fixes a bug in the OpenHBCI keyfile plugin and decreases the
+verbosity of the message engine.
+
+
+===========================================================================
                     gwenhywfar-3.1.0 (2008/01/25)
 ===========================================================================
 
